--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <title>Pluralsight Administration</title>
-    <link rel="stylesheet" href="css/bundle.css" />
+    <link rel="stylesheet" href="/css/bundle.css" />
   </head>
   <body>
     <div id="app"></div>
-    <script src="scripts/bundle.js"></script>
+    <script src="/scripts/bundle.js"></script>
   </body>
 </html>
